<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SectionAActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.drig_survey.ui.SectionAActivity" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl">

        <LinearLayout style="@style/linearlayout_view">

            <LinearLayout
                android:id="@+id/llcrfCase"
                style="@style/linearlayout_view">

                <LinearLayout
                    android:id="@+id/llcacrf01"
                    style="@style/linearlayout_view">

                    <TextView
                        style="@style/textview_fm_lst_h"
                        android:text="@string/dsah" />

                    <!--Spinner dsa01-->
                    <android.support.v7.widget.CardView style="@style/cardView">

                        <LinearLayout style="@style/linearlayout_view_wt_bound">

                            <TextView
                                style="@style/i_textview"
                                android:text="@string/dsa01" />

                            <Spinner
                                android:id="@+id/hfcodea01"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="20dp" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <!--Spinner dsa02-->
                    <android.support.v7.widget.CardView style="@style/cardView">

                        <LinearLayout style="@style/linearlayout_view_wt_bound">

                            <TextView
                                style="@style/i_textview"
                                android:text="@string/dsa02" />

                            <Spinner
                                android:id="@+id/hfcodea02"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="20dp" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <!--Spinner dsa03 CHW-->
                    <android.support.v7.widget.CardView style="@style/cardView">

                        <LinearLayout style="@style/linearlayout_view_wt_bound">

                            <TextView
                                style="@style/i_textview"
                                android:text="@string/dsa03" />

                            <Spinner
                                android:id="@+id/hfcodea03"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="20dp" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <!--EditText dsa04 CHW-->
                    <android.support.v7.widget.CardView style="@style/cardView">

                        <LinearLayout style="@style/linearlayout_view_wt_bound">

                            <TextView
                                style="@style/i_textview"
                                android:text="@string/dsa04" />

                            <EditText
                                android:id="@+id/dsa04"
                                style="@style/EditText_number"
                                android:maxLength="4"
                                android:hint="@string/dsa04" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <!--EditText dsa05 -->
                    <android.support.v7.widget.CardView style="@style/cardView">

                        <LinearLayout style="@style/linearlayout_view_wt_bound">

                            <TextView
                                style="@style/i_textview"
                                android:text="@string/dsa05" />

                            <EditText
                                android:id="@+id/dsa05"
                                style="@style/EditText"
                                android:maxLines="2"
                                android:hint="@string/dsa05" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <!--EditText dsa06 -->
                    <android.support.v7.widget.CardView style="@style/cardView">

                        <LinearLayout style="@style/linearlayout_view_wt_bound">

                            <TextView
                                style="@style/i_textview"
                                android:text="@string/dsa06" />

                            <EditText
                                android:id="@+id/dsa06"
                                style="@style/EditText"
                                android:hint="@string/dsa06" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <!--EditText dsa07 -->
                    <android.support.v7.widget.CardView style="@style/cardView">

                        <LinearLayout style="@style/linearlayout_view_wt_bound">

                            <TextView
                                style="@style/i_textview"
                                android:text="@string/dsa07" />

                            <EditText
                                android:id="@+id/dsa07"
                                style="@style/EditText_number"
                                android:hint="@string/dsa07" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <!--EditText dsa08 -->
                    <android.support.v7.widget.CardView style="@style/cardView">

                        <LinearLayout style="@style/linearlayout_view_wt_bound">

                            <TextView
                                style="@style/i_textview"
                                android:text="@string/dsa08" />

                            <EditText
                                android:id="@+id/dsa08"
                                style="@style/EditText_number"
                                android:maxLength="13"
                                android:hint="@string/dsa08" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <!--EditText dsa09 -->
                    <android.support.v7.widget.CardView style="@style/cardView">

                        <LinearLayout style="@style/linearlayout_view_wt_bound">

                            <TextView
                                style="@style/i_textview"
                                android:text="@string/dsa09" />

                            <EditText
                                android:id="@+id/dsa09"
                                style="@style/EditText_number"
                                android:hint="@string/dsa09total" />

                            <EditText
                                android:id="@+id/dsa10"
                                style="@style/EditText_number"
                                android:hint="@string/dsa09boy" />

                            <EditText
                                android:id="@+id/dsa11"
                                style="@style/EditText_number"
                                android:hint="@string/dsa09girl" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <!--EditText dsa10 -->
                    <android.support.v7.widget.CardView style="@style/cardView">

                        <LinearLayout style="@style/linearlayout_view_wt_bound">

                            <TextView
                                style="@style/i_textview"
                                android:text="@string/dsa10" />

                            <EditText
                                android:id="@+id/dsa12"
                                style="@style/EditText_number"
                                android:hint="@string/dsa10total" />

                            <EditText
                                android:id="@+id/dsa13"
                                style="@style/EditText_number"
                                android:hint="@string/dsa10boy" />

                            <EditText
                                android:id="@+id/dsa14"
                                style="@style/EditText_number"
                                android:hint="@string/dsa10girl" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <!--Radio Button dsa15 -->
                    <android.support.v7.widget.CardView style="@style/cardView">

                        <LinearLayout style="@style/linearlayout_view_wt_bound">

                            <TextView
                                style="@style/i_textview"
                                android:text="@string/dsa11" />

                            <RadioGroup
                                android:id="@+id/dsa15"
                                style="@style/i_radiogroup">

                                <RadioButton
                                    android:id="@+id/dsa15a"
                                    style="@style/i_radiobutton"
                                    android:text="@string/yes" />

                                <RadioButton
                                    android:id="@+id/dsa15b"
                                    style="@style/i_radiobutton"
                                    android:text="@string/no" />

                            </RadioGroup>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <!--EditText dsa16 -->
                    <android.support.v7.widget.CardView
                        style="@style/cardView"
                        android:visibility='@{dsa15a.checked ? View.VISIBLE : View.GONE}'>

                        <LinearLayout style="@style/linearlayout_view_wt_bound">

                            <TextView
                                style="@style/i_textview"
                                android:text="Count PW" />

                            <EditText
                                android:id="@+id/dsa16"
                                style="@style/EditText_number"
                                android:hint="Count PW" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <!--EditText dsa17 -->
                    <android.support.v7.widget.CardView style="@style/cardView">

                        <LinearLayout style="@style/linearlayout_view_wt_bound">

                            <TextView
                                style="@style/i_textview"
                                android:text="@string/dsa12" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </LinearLayout>

            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->

            <LinearLayout
                android:id="@+id/childSec00a"
                style="@style/linearlayout_view"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Continue"
                    style="@style/buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#1ed61e"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="@string/nextSection"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_End"
                    style="@style/buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="@string/end_interview"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>
